--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,73 @@
-feedparser==5.2.1
-pkg-resources==0.0.0
+appdirs==1.4.3
+asn1crypto==0.24.0
+aspy.yaml==1.3.0
+backports-abc==0.5
+backports.ssl-match-hostname==3.5.0.1
+boto3==1.4.2
+botocore==1.8.48
+cached-property==1.3.1
+certifi==2018.1.18
+cfgv==2.0.1
+chardet==3.0.4
+Click==7.0
+configparser==4.0.2
+contextlib2==0.6.0.post1
+cryptography==2.1.4
+distlib==0.3.0
+docker==2.5.1
+docker-compose==1.17.1
+docker-pycreds==0.2.1
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
+enum34==1.1.6
+filelock==3.0.12
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.3.0
+identify==1.4.11
+idna==2.6
+importlib-metadata==1.5.0
+importlib-resources==1.0.2
+ipaddress==1.0.17
+Jinja2==2.10.3
+jmespath==0.9.3
+jsonschema==2.6.0
+keyring==10.6.0
+keyrings.alt==3.0
+livereload==2.6.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
+mkdocs==1.0.4
+mock==2.0.0
+nodeenv==1.3.5
+olefile==0.45.1
+pathlib2==2.3.5
+pbr==3.1.1
+Pillow==5.1.0
+pre-commit==1.21.0
+pycrypto==2.6.1
+Pygments==2.2.0
+pygobject==3.26.1
+pyOpenSSL==17.5.0
+python-dateutil==2.6.1
+pytz==2018.3
+pyxdg==0.25
+PyYAML==5.3
+requests==2.18.4
+roman==2.0.0
+s3transfer==0.1.13
+scandir==1.10.0
+SecretStorage==2.3.1
+singledispatch==3.4.0.3
+six==1.14.0
+texttable==0.9.1
+toml==0.10.0
+tornado==5.1.1
+typing==3.7.4.1
+urllib3==1.22
+vboxapi==1.0
+virtualenv==20.0.4
+websocket-client==0.44.0
+youtube-dl==2020.1.24
+zipp==1.1.0
