--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ importlib-metadata==1.5.0
 jeepney==0.4.2
 keyring==21.1.0
 more-itertools==8.2.0
+numpy==1.18.2
 packaging==20.1
+pandas==1.0.3
 pkg-resources==0.0.0
 pkginfo==1.5.0.1
 pluggy==0.13.1
@@ -20,6 +22,8 @@ pycparser==2.19
 Pygments==2.5.2
 pyparsing==2.4.6
 pytest==5.3.5
+python-dateutil==2.8.1
+pytz==2019.3
 readme-renderer==24.0
 requests==2.23.0
 requests-toolbelt==0.9.1
